# llm-benchmark-kit

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
config/: test_cases.json
docs/: architecture.md
docs/ci-sample/: github-actions.yml
examples/reports/: authenticity_report_sample.md  cases_report_sample.md  stress_report_sample.md  summary_report_sample.md
scripts/: build_summary.py  common.py  discover_models.py  run_authenticity.py  run_cases.py  run_stress.py
scripts/legacy/: basic_test.py  budget_stress_test.py  cross_vendor_authenticity.py  debug_responses_api.py  pro_test.py
tests/: test_scripts_syntax.py  test_test_cases_config.py
